# alzartak

./: CMakeLists.txt  README.md  build.bat  build.sh  build_vs.bat  run.bat
.github/workflows/: cmake-build.yml
include/alzartak/: alzartak.h  async_job.h  batch_renderer.h  batch_shader.h  camera.h  color.h  colors.h  common.h  image.h  image3d.h  input.h  mesh.h  mesh_shader.h  parallel.h  parallel_for.h  render_texture.h  renderer.h  shader.h  texture.h  util.h  window.h
sample/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  alzartak.cpp  batch_renderer.cpp  image.cpp  mesh.cpp  renderer.cpp  texture.cpp  util.cpp
src/image/: image.cpp  image3d.cpp
src/parallel/: parallel.cpp  parallel_for.cpp
src/shader/: batch_shader.cpp  mesh_shader.cpp  shader.cpp
test/: CMakeLists.txt  main.cpp
